<resources>
    <string name="app_name">edakuntalp_odev1</string>
    <string name="extended_fab_content_desc">Count</string>
    <string name="extended_fab_label">Count</string>
    <string name="username_string">Username</string>
    <string name="password_string">Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="login">Login</string>
    <string name="account"> Don’t have an account? <b><u>Create</u></b></string>
    <string name="movies"><b>MOVIES</b></string>
    <string name="what_would_you">What would you like to see today?<font color='#3A40CC'> Popular</font></string>
    <string name="popular_actor">Popular Actor’s</string>
    <string name="see_all">See all</string>
    <string name="robert_de_niro">Robert De Niro</string>
    <string name="jack_nicholson">Jack Nicholson</string>
    <string name="marlon_brando">Marlon Brando</string>
    <string name="leonardo">Leonardo Di Caprio</string>


</resources>